fix: correct layers on map switch